# libregutils

./: AUTHORS  ChangeLog  INSTALL  LICENSE  Makefile.am  README  README.md  configure.ac
examples/: demo.c
include/: regutils.h
man/: preg_delopt.3  preg_eo.3  preg_errcode.3  preg_errmsg.3  preg_escape.3  preg_free.3  preg_getmatch.3  preg_getrep.3  preg_getsplit.3  preg_init.3  preg_matc.3  preg_match.3  preg_matchlen.3  preg_replace.3  preg_replen.3  preg_setopt.3  preg_so.3  preg_split.3  preg_splitc.3  preg_splitlen.3  preg_subc.3
src/: regutils.c  vector.h
