lib_LTLIBRARIES = src/libregutils.la
include_HEADERS = $(top_srcdir)/include/regutils.h
src_libregutils_la_SOURCES = src/regutils.c src/vector.h
src_libregutils_la_CPPFLAGS = -I$(top_srcdir)/include
src_libregutils_la_LDFLAGS = -version-info 0:0:0
noinst_PROGRAMS = examples/demo
examples_demo_SOURCES = examples/demo.c
examples_demo_CPPFLAGS = -I$(top_srcdir)/include
examples_demo_LDADD = src/libregutils.la
